# digital-sentinel

./: .gitignore  README.md  cost_cleanup.sh
Screenshoot/architecture/: architecture.png_original
config/: entity-allowlist.yaml
datasample/: .gitignore  README.md  event_example.json  main.py  profiling.py  pyproject.toml
datasample/bronze/: bronze_event.parquet
datasample/gold/: entity_metrics.parquet  global.parquet  user_metrics.parquet
datasample/silver/: silver_event.parquet
docs/: ARCHITECTURE.md  RUNBOOK.md
infrastructure/docker/ingest/: Dockerfile  README.md  docker-compose.yml  requirements.txt
infrastructure/docker/ingest/kafka-connect/: README.md  deploy-connectors.sh  kafka-connect.properties  s3-sink-raw-events.json
infrastructure/terraform/: README.md  backend.tf  backend.tf.example  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infrastructure/terraform/bootstrap/: README.md  main.tf
infrastructure/terraform/modules/athena/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/ecs/: main.tf  (+2 more)
scripts/: start_pipeline.sh  stop_pipeline.sh
scripts/ingest/: README.md  build_and_push_docker.sh
scripts/processing/: emr_serverless_helpers.sh  serverless_cancel_all.sh  serverless_monitor.sh  serverless_submit_bronze.sh  serverless_submit_gold.sh  serverless_submit_silver.sh
src/ingest/: pyproject.toml  requirements.txt  sse_consumer.py
src/ingest/kafkaDocker/: simple_sse_consumer.py
src/processing/: bronze_writer.py  data_quality.md  data_quality.py  gold_writer.py  silver_writer.py
(+23 files in other folders)
